--- a/app/frontend/src/pages/ImagePage/ImagePage.module.css
+++ b/app/frontend/src/pages/ImagePage/ImagePage.module.css
@@ -38,7 +38,7 @@
         0px 8px 16px rgba(0, 0, 0, 0.14),
         0px 0px 2px rgba(0, 0, 0, 0.12);
     padding: 10px;
-    height: 15rem;
+    height: 20rem;
     flex: 1;
     background: white;
     display: flex;
@@ -47,7 +47,7 @@
 .imageContainer {
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .imageContainer img {
@@ -58,7 +58,7 @@
 
 .dropZone {
     border: dashed 2px black;
-    height: 15rem;
+    height: 100%;
 }
 
 .fileInput {
@@ -67,9 +67,36 @@
 }
 
 .fileInputLabel {
-    display: block;
-    width: 50%;
+    display: flex;
 }
+
+.selectedImageContainer {
+    width: auto;
+    height: 15rem;
+}
+
+.selectedImage {
+    width: auto;
+    height: 100%;
+}
+
+.imageInput {
+    display: flex;
+    flex-direction: column;
+    margin: 1rem 4rem;
+}
+
+.imagePaste {
+    width: 100%;
+    height: 40px;
+}
+
+.text {
+    margin-bottom: 10px;
+}
+/* .searchBox {
+    height: 25vh;
+} */
 
 /* For extra-wide screens (e.g., large monitors) */
 @media screen and (min-width: 1440px) {
