--- a/app/frontend/src/pages/ImagePage/ImagePage.module.css
+++ b/app/frontend/src/pages/ImagePage/ImagePage.module.css
@@ -47,7 +47,7 @@
 .imageContainer {
     width: 100%;
     height: 100%;
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 .imageContainer img {
@@ -56,23 +56,25 @@
     object-fit: cover;
 }
 
-.dropZone {
-    border: dashed 2px black;
-    height: 100%;
-}
-
 .fileInput {
     display: none;
     width: 100%;
 }
 
-.fileInputLabel {
+.dropZone {
     display: flex;
+    border: dashed 2px black;
+    height: 100%;
+    width: 50%;
+}
+
+.dropZoneContent {
+    width: 100%;
 }
 
 .selectedImageContainer {
     width: auto;
-    height: 15rem;
+    height: 14rem;
 }
 
 .selectedImage {
@@ -83,20 +85,23 @@
 .imageInput {
     display: flex;
     flex-direction: column;
-    margin: 1rem 4rem;
-}
-
-.imagePaste {
+    margin: 1rem 1rem;
     width: 100%;
-    height: 40px;
 }
 
 .text {
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
-/* .searchBox {
-    height: 25vh;
-} */
+
+.uploadContainer {
+    width: 100%;
+    text-align: center;
+}
+
+.uploadButton {
+    margin: 20px;
+    align-self: center;
+}
 
 /* For extra-wide screens (e.g., large monitors) */
 @media screen and (min-width: 1440px) {
